--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,25 @@
-/* 
+.list {
+    text-align: center;
+    background-color: whitesmoke;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.taskButton:hover button {
+    display: inline-block;
 
-*/
+}
+
+button {
+    display: none;
+    background: none;
+    font-size: 10px;
+    border: none;
+}
+
+.card {
+    display: inline-block;
+    background-color: white;
+}
+
+.taskItem {
+    border-bottom: 1px solid#c2c2c2;}
+
